Update cache panel for django 1.3 by implementing every method and providing a cache backend instead of monkeypatching. Also update the template to match SQL Panel a little more.

--- a/debug_toolbar/media/debug_toolbar/css/toolbar.css
+++ b/debug_toolbar/media/debug_toolbar/css/toolbar.css
@@ -357,6 +357,10 @@
 	text-align: left;
 }
 
+#djDebug .djCacheHideStacktraceDiv tbody th {
+	text-align: left;
+}
+
 #djDebug .djSqlExplain td {
 	white-space: pre;
 }
